fix: 1040px, 10px gap

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -71,7 +71,7 @@ a.route-link.vp-feature-item.link:hover{
 .vp-tab { border-radius: var(--tab-border-radius) !important; }
 
 .vp-project-home .vp-feature {
-  padding-bottom: 0;
+  padding-bottom: 10px;
 }
 
 .vp-card-title {
